--- a/style.css
+++ b/style.css
@@ -9,5 +9,10 @@ text-align: center;
     padding: 0;
     display: flex;
     justify-content: center;
+align-items: center;
+
 }
+.jurandir {
+ font-size: 20px;
+}   
 
