--- a/style.css
+++ b/style.css
@@ -1,18 +1,36 @@
-.cabeçalho{
-    background-color: blue;
-color: black;
-padding: 15px;
+
+.cabeçalho {
+background-color: #3b82f6; /* azul mais suave */
+color: white;
+padding: 20px;
 text-align: center;
-}
-.lista-principal{
-    list-style: none;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-align-items: center;
 
 }
+
+.lista-principal {
+list-style: none;
+padding: 0;
+margin-top: 10px;
+display: flex;
+justify-content: center;
+width:20px;
+font-size: 20px;
+
+}
+
+
 .jurandir {
- font-size: 20px;
-}   
+font-size: 20px;
+color: deeppink;
+margin: 30px;
+text-align: center;
+background-color: blueviolet;
+}
 
+.item{
+background-color: bisque;
+color: #3b82f6;
+padding:8px 12px ;
+border-radius: 8px;
+font-weight: bold;
+}
