--- a/style.css
+++ b/style.css
@@ -1,36 +1,38 @@
-
 .cabeçalho {
-background-color: #3b82f6; /* azul mais suave */
-color: white;
-padding: 20px;
-text-align: center;
-
-}
-
-.lista-principal {
-list-style: none;
-padding: 0;
-margin-top: 10px;
-display: flex;
-justify-content: center;
-width:20px;
-font-size: 20px;
-
-}
-
-
-.jurandir {
-font-size: 20px;
-color: deeppink;
-margin: 30px;
-text-align: center;
-background-color: blueviolet;
-}
-
-.item{
-background-color: bisque;
-color: #3b82f6;
-padding:8px 12px ;
-border-radius: 8px;
-font-weight: bold;
-}
+    background-color: #3b82f6;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    width: 100%;
+    box-sizing: border-box;
+    }
+    
+    .lista-principal {
+    list-style: none;
+    padding: 0;
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    font-size: 20px;
+    flex-wrap: wrap;
+    }
+    
+    .item {
+    background-color: bisque;
+    color: #3b82f6;
+    padding: 8px 12px;
+    border-radius: 8px;
+    font-weight: bold;
+    }
+    
+    .jurandir {
+    font-size: 20px;
+    color: deeppink;
+    margin: 30px 0;
+    text-align: center;
+    background-color: blueviolet;
+    width: 100%;
+    padding: 20px;
+    box-sizing: border-box;
+    }
